--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,14 @@ _Rhistory
 # Examples
 
 # ignore all .a files
-*.a
+# *.a
 # but do track lib.a, even though you're ignoring .a files above
 # !lib.a
 # only ignore the TODO file in the current directory, not subdir/TODO
-/TODO
+# /TODO
 # ignore all files in any directory named build
-build/
+# build/
 # ignore doc/notes.txt, but not doc/server/arch.txt
-doc/*.txt
+# doc/*.txt
 # ignore all .pdf files in the doc/ directory and any of its subdirectories
- doc/**/*.pdf
+# doc/**/*.pdf
